--- a/css/home.css
+++ b/css/home.css
@@ -21,9 +21,24 @@ body
 #mycreation{
     margin=5px;
 }
+
 .homeImg{
     padding:20px;
     padding-left:35px;
     height:90%;
     width:95%;
+}
+.fa{
+ color:bisque;   
+}
+.fa-angle-left{
+    position:absolute;
+    left:50px;
+    top:350px;
+}
+.fa-angle-right{
+    position: absolute;
+    top:350px;
+    right:50px;
+    left:1220px;
 }
