--- a/css/home.css
+++ b/css/home.css
@@ -24,8 +24,8 @@ body
 .homeImg{
     padding:20px;
     padding-left:35px;
-    height:90%;
-    width:95%;
+    height:600px;
+    width:1230px;
 }
 .fa{
  color:bisque;   
