added login.html and deleted useless images

--- a/css/home.css
+++ b/css/home.css
@@ -51,8 +51,8 @@ li a:visited{
     padding-left:39px;
 	padding-bottom:0px;
 	padding-right:0px;
-    height:600px;
-    width:1254px;
+    height:85%;
+    width:95%;
 }
 
 #see{
