--- a/css/makeConfess.css
+++ b/css/makeConfess.css
@@ -6,7 +6,7 @@
 
 #main{
     position:absolute;
-    top:15%;
+    top:5%;
     left:5%;
     padding:15px 15px;
     background-color: rgba(88, 62, 126, 0.2);
@@ -17,6 +17,9 @@
 }
 .input{
     margin-bottom:20px;
+}
+.input .inpf{
+    padding: 6px 12px;
 }
 .extra{  
     margin-left:5px;
@@ -44,4 +47,8 @@
         left:35%;
     }
 } 
+@media only screen and (orientation:landscape and max-height:400px){
+    #main{
+        top:2%;
+    }
 }
