Made the backend of makeConfess.php

--- a/css/makeConfess.css
+++ b/css/makeConfess.css
@@ -21,9 +21,9 @@
 .input .inpf{
     padding: 6px 12px;
 }
-.extra{  
+/*.extra{  
     margin-left:5px;
-}
+}*/
 #submission{
     margin-left:90px;
 }
