--- a/css/home.css
+++ b/css/home.css
@@ -73,3 +73,12 @@ span a:visited{
     margin-left:20px;
     margin-right:20px;
 }
+div.fixed {
+margin: 0%;
+background-color:  white; 
+ padding: 0%;
+ position: fixed;
+ bottom: 0;
+ width: 100%;
+ border: 3px solid black;
+}
