--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,14 @@
     margin:0px;
 	padding:0px;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+   overflow-x: hidden;
+}
 body
 {
 	padding-top:10px;
@@ -79,7 +87,7 @@ nav{
     width:95%;
 }
 
-#see{
+/*#see{
 	position:absolute;
 	top:81%;
 	left:30%;
@@ -88,7 +96,7 @@ nav{
 	position:absolute;
 	top:81%;
 	left:48%;
-}
+}*/
 #confessions{
     position:relative;
     display:block;
@@ -116,12 +124,12 @@ background-color:  white;
     border-radius:10px;
     background-color: rgba(88, 62, 126, 0.2);
 }
-.messageno{
+/*.messageno{
     position:relative;
     display:block;
     margin-left:8px;
     margin-top:5px;
-}
+}*/
 .message{
     position:relative;
     display:block;
@@ -167,6 +175,17 @@ background-color:  white;
     display:inline;
 }
 @media only screen and (max-width:400px){
+    body{
+        padding-top: 0px;
+    }
+    nav{
+        margin-top:0px;
+        margin-bottom:0px;
+    }
+    .logo{
+        width:25%;
+        height:10%;
+    }
     #about{
         visibility: hidden;
     }
@@ -184,18 +203,22 @@ background-color:  white;
     #make{
         visibility:hidden;
     }
+    .conf{
+        margin-right:0px;
+    }
     #confessions{
         margin-left:0px;
         margin-right:0px;
     }
     .message{
         margin-right:0px;
+        margin-left:0px;
     }
     div.fixed{
         font-size:65%;
     }
 }
-@media only screen and (min-width:500px){
+/*@media only screen and (min-width:500px){
     #main{
         left:20%;
     }
@@ -214,4 +237,4 @@ background-color:  white;
     #main{
         top:2%;
     }
-}
+}*/
