--- a/css/home.css
+++ b/css/home.css
@@ -74,17 +74,52 @@ nav{
     width:150px;
     height:80px;
 }
-#plustag{
-    display:none;
-    margin-top:4%;
-}
-#plusmake{
-    display:none;
-}
+
 #makeConfess{
     float:right;
     margin-right:30px;
     margin-top:1%;
+}
+.dropdown {
+    visibility:hidden;
+    position: relative;
+    float:right;
+    margin-right:2%;
+    margin-top:2%;
+}
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown-content {
+    position:absolute;
+    right:5%;
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
 #mycreation{
     width:100%;
@@ -171,7 +206,7 @@ opacity:0.7;
 .fb-like{
     margin-left:8px;
 }
-@media only screen and (max-width:400px){
+@media only screen and (max-width:670px){
     body{
         font-size:15px;
     }
@@ -192,19 +227,9 @@ opacity:0.7;
         width:25%;
         height:10%;
     }
-    #plustag{
-        float:right;
-        margin-right: 6%;
-        display:inline;
-    }
-    #plusmake{
-        display:block;
-        visibility:hidden;
-        color:white;
-        margin-left:60%;
-        margin-top:11%;
-        z-index:3;
-        transition: 0.3s;
+    .dropdown{
+        visibility:visible;
+        margin-left:15%%;
     }
     #makeConfess{
         display:none;
@@ -232,11 +257,7 @@ opacity:0.7;
         font-size:65%;
     }
 }
-/*@media only screen and (min-width:500px){
-    #main{
-        left:20%;
-    }
-}
+/*
 @media only screen and (min-width:600px){
     #main{
         left:30%;
